# space-invaders-in-C

./: .gitignore  CMakeLists.txt  README.md
includes/: enemy.h  game.h  main.h  player.h  score.h
src/: enemy.c  game.c  main.c  player.c  score.c
